<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Proxy Settings</string>
    <string name="app_versionname">Version %1$s</string>
    <string name="app_codename">Build #PS-%1$d</string>
    <string name="title_changelog">@string/app_name</string>
    <string name="close">Close</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="proxy_checker">Proxy checker</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="oops">Oops</string>
    <string name="wifi_disabled">Wi-Fi disabled: no Access Point can be selected</string>
    <string name="wifi_enabled">Wi-Fi enabled</string>
    <string name="no_ap_active">Not connected to any Wi-Fi Access Point</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="ap_selector">Wi-Fi Access Point</string>
    <string name="go_to_wifi_settings">Go to system Wi-Fi settings</string>
    <string name="wifi_toggle_on_summary">Turn on Wi-Fi</string>
    <string name="wifi_toggle_off_summary">Turn off Wi-Fi</string>
    <string name="not_available">Not available</string>
    <string name="network_status">Network status</string>
    <string name="proxy_status">Proxy status</string>
    <string name="ap_selection_title">Select the Wi-Fi access point:</string>
    <string name="connected_to">%1$s &#8230;</string>
    <string name="no_proxy_defined">No proxies defined. Please go to proxies section and create a new one!</string>
    <string name="enable_wifi_action">Enable Wi-Fi</string>
    <string name="setupap_wifi_action">Connect to available Wi-Fi</string>
    <string name="connect_to_wifi_action">Connect to %1$s</string>
    <string name="checking_action">Checking configuration</string>
    <string name="not_supported_network_8021x_error_message">Proxy Settings is currently not able to access and modify the settings for Wi-Fi networks with 802.1x security type.</string>
    <string name="exception_apl_writeconfig_error_message">Proxy Settings experienced an error writing the configuration on the device.</string>
    <string name="wifi_empty_list_no_ap">No Wi-Fi networks configured</string>
    <string name="proxy_empty_list">No proxies saved</string>
    <string name="tags_empty_list">No tags saved</string>
    <string name="wifi_empty_list_wifi_off">To see available networks, turn Wi-Fi on.</string>
    <string name="ap_status_label">Status:</string>
    <string name="ap_security_label">Security:</string>
    <string name="ap_proxy_label">Proxy:</string>
    <string name="validation_proxy_summary_checking">Checking configuration &#8230;</string>
    <string name="validation_proxy_summary_warning">Validation warnings &#8230;</string>
    <string name="validation_proxy_summary_errors">Validation errors &#8230;</string>
    <string name="validation_proxy_summary_ok">Validation details &#8230;</string>
    <string name="validation_wifi_enabled_title">Wi-Fi status</string>
    <string name="validation_wifi_selected_title">Connected Wi-Fi AP</string>
    <string name="validation_proxy_enabled_title">Proxy enabled</string>
    <string name="validation_proxy_host_title">Proxy IP/hostname</string>
    <string name="validation_proxy_port_title">Proxy Port</string>
    <string name="validation_proxy_reachable_title">Ping proxy host</string>
    <string name="validation_proxy_web_reachable_title">WEB reachability</string>
    <string name="pref_main_title">Proxy configuration</string>
    <string name="pref_tools_title">Tools</string>
    <string name="pref_help_whatsnew">What\'s new</string>
    <string name="pref_help_changelog">Changelog</string>
    <string name="pref_send_feedback">Send us a feedback!</string>
    <string name="pref_send_feedback_summary">Write a mail to SHOULDIT</string>
    <string name="pref_about_title">About</string>
    <string name="disclaimer_intro_title">Introduction</string>
	<string name="disclaimer_intro_text">Congratulations and thank you for
	    downloading <b>Proxy Settings</b>! Please read carefully the following
	    introduction to the application and the Android\'s proxy issue.
	</string>
    <string name="help_text_0_title">What</string>
	<string name="help_text_0_subtitle">What does <b>Proxy Settings</b> offer?
	</string>
	<string name="help_text_0_description"><b>Proxy Settings</b> is an utility
		application that provides a set of tools to ease the access and the
		modification of the proxy configuration into your Android device.
	</string>
    <string name="help_text_1_title">Details</string>
	<string name="help_text_1_subtitle">More information on <b>Proxy Settings</b>
	</string>
	<string name="help_text_1_description"><b>Proxy Settings</b> provides a
		shortcut for calling a system application called <i>ProxySelector</i> 
		(technically it\'s an <i>Activity</i>) hidden into Android, in order 
		to edit the system\'s proxy configuration of your device.
		\n\nIn the majority of the Android ROMs the <i>ProxySelector 
		Activity</i> is already present but hidden to the user:	what <b>Proxy 
		Settings</b> does is to simply call this existing system utility.
	</string>
    <string name="help_text_2_title">Warning</string>
	<string name="help_text_2_subtitle">Use <b>Proxy Settings</b> with caution!
	</string>
	<string name="help_text_2_description">When Google engineers released the
		first versions of Android, they probably decided to hide the 
		<i>ProxySelector Activity</i> because of the lack of support into both 
		the	OS and developers API. <b>Proxy Settings</b> let you change these 
		settings, but we suggest the users to do it very cautiously!
	</string>
	<string name="help_text_2_description_b"><b>Please remember</b> that
	    uninstalling this application doesn\'t automatically restore the default
	    values of the proxy configuration of your device. You should explicitly
	    clear the proxy configuration before uninstalling <b>Proxy Settings</b>!
	    An improper use of the application could result in a wrong working of
	    the network stack of your device!
	</string>
    <string name="help_text_3_title">Support</string>
	<string name="help_text_3_subtitle">About the proxy support on <b>Android</b>
	</string>
	<string name="help_text_3_description">Configuring the proxy doesn\'t mean
	    that all your applications will automatically start to
		using these settings! This is due to a not easy understandable API for 
		developers. If you are interested in a deeper analysis of this issue,
		you can find a detailed explanation of the problem and leave your 
		feedbacks/comments on the <b>Android Proxy Project</b> official website:
	</string>
	<string name="help_text_3_description_link">http://www.android-proxy.com
	</string>
	<string name="help_text_3_description_c">The project offers also an open
		source module called <b>Android Proxy Library (APL)</b> that provides to
		the	developers an easy way to access and use the proxy settings in
		every Android application. So, if you want the <b>Proxy</b> support in
		your favourite applications, start request this feature to their 
		developers!
	</string>
    <string name="help_text_4_title">Tools</string>
    <string name="help_text_4_subtitle"><b>Proxy Settings</b> tools</string>
	<string name="help_text_4_description"><b>Proxy Settings</b> offers to the
		users a set of tools to check and troubleshoot the selected proxy 
		configuration:
	</string>
	<string name="help_text_4_description_b">\n\n&#8226; A <b>Configuration
	    checker</b>: it provides useful status indicators related to the proxy 
	    configuration of your Android device.
        \n\n&#8226; A <b>URL downloader</b>: it gives you the possibility to
        download a specific remote resource.
        \n\n&#8226; A <b>URL browser</b>: it opens a WEB browser page with 
        full proxy support on a selected URL.
    </string>
    <string name="help_text_5_title">Check</string>
    <string name="help_text_5_subtitle">The <b>Configuration checker</b></string>
	<string name="help_text_5_description"><b>Proxy Settings</b> provides an
		useful section, called <b>Configuration	checker</b> that let you
		check the proxy configuration with useful status indicators, helping 
		understand the issues you may find setting the proxy on your Android
		device:
	</string>
    <string name="preferences_statusbar_notification_title">Notification</string>
    <string name="preferences_statusbar_notification_description_enabled">Status bar notification enabled</string>
    <string name="preferences_statusbar_notification_persistance_title">Notification persistance</string>
    <string name="preferences_statusbar_notification_persistance_description_enabled">Status bar notification cannot be cleared</string>
    <string name="preference_proxy_host_port_title">Proxy selector</string>
    <string name="preference_test_proxy_configuration_title">Validate network connection</string>
    <string name="preference_test_proxy_configuration_summary">Start proxy configuration tests</string>
    <string name="preference_test_proxy_webview_title">URL browser</string>
    <string name="preference_test_proxy_webview_summary">Browse a WEB page with full proxy support</string>
    <string name="preference_test_proxy_urlretriever_title">URL downloader</string>
    <string name="preference_test_proxy_urlretriever_summary">Download a specific remote resource with full proxy support</string>
    <string name="pref_key_proxy_settings_advanced_title">Application options</string>
    <string name="pref_key_proxy_settings_advanced_prefscreen_title">Configuration checker</string>
    <string name="pref_key_proxy_settings_advanced_prefscreen_description">Help and guide you checking and fixing your proxy settings configuration</string>
    <string name="preference_proxy_authentication_screen_title">Proxy Authentication</string>
    <string name="preference_proxy_authentication_screen_summary">Set proxy authentication</string>
    <string name="preference_proxy_authentication_title">Authentication</string>
    <string name="preference_proxy_authentication_summary_disabled">Proxy authentication disabled</string>
    <string name="preference_proxy_authentication_user_title">Username</string>
    <string name="preference_proxy_authentication_user_summary"/>
    <string name="preference_proxy_authentication_password_title">Password</string>
    <string name="preference_proxy_authentication_password_summary"/>
    <string name="preference_help_title">Documentation</string>
    <string name="preference_about_title">About</string>
    <string name="proxy_settings_about">Application version</string>
    <string name="proxy_port_label">Proxy port</string>
    <string name="proxy_port_hint">Proxy port</string>
    <string name="proxy_exclusionlist_title">Bypass list</string>
    <string name="proxy_exclusionlist_label">Bypass proxy for</string>
    <string name="proxy_exclusionlist_hint">Bypass list</string>
    <string name="proxy_hostname_label">Proxy IP/hostname</string>
    <string name="proxy_hostname_hint">Proxy host</string>
    <string name="about_copyright">\u00A9 SHOULDIT 2013</string>
    <string name="about_opensource">Proxy Settings is an open source software. You can find the source code here:</string>
    <string name="about_github">https://github.com/shouldit/proxy-settings"</string>
    <string name="pref_developers">Developer options</string>
    <string name="proxy_list">Proxies list</string>
</resources>