<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

		<EditTextPreference
			android:dependency="pref_proxy_enabled"
			android:dialogMessage="@string/proxy_hostname_hint"
			android:key="pref_proxy_host"
			android:persistent="false"
			android:title="@string/proxy_hostname_label" />

		<EditTextPreference
			android:dependency="pref_proxy_enabled"
			android:dialogMessage="@string/proxy_port_hint"
			android:dialogTitle="@string/proxy_port_label"
			android:key="pref_proxy_port"
			android:numeric="integer"
			android:persistent="false"
			android:title="@string/proxy_port_label" />

		<EditTextPreference
			android:dependency="pref_proxy_enabled"
			android:dialogMessage="@string/proxy_exclusionlist_hint"
			android:dialogTitle="@string/proxy_exclusionlist_label"
			android:key="pref_proxy_bypass"
			android:persistent="false"
			android:title="@string/proxy_exclusionlist_title" />

		<PreferenceScreen
			android:dependency="pref_proxy_enabled"
			android:key="pref_proxy_authentication"
			android:summary="@string/preference_proxy_authentication_screen_summary"
			android:title="@string/preference_proxy_authentication_screen_title">
			<CheckBoxPreference
				android:enabled="true"
				android:key="preference_authentication_enabled"
				android:persistent="false"
				android:summary="@string/preference_proxy_authentication_summary_disabled"
				android:title="@string/preference_proxy_authentication_title" />

			<EditTextPreference
				android:dependency="preference_authentication_enabled"
				android:key="preference_authentication_user"
				android:persistent="false"
				android:summary="@string/preference_proxy_authentication_user_summary"
				android:title="@string/preference_proxy_authentication_user_title" />
			<EditTextPreference
				android:dependency="preference_authentication_enabled"
				android:inputType="textPassword"
				android:key="preference_authentication_password"
				android:persistent="false"
				android:summary="@string/preference_proxy_authentication_password_summary"
				android:title="@string/preference_proxy_authentication_password_title" />
		</PreferenceScreen>

</PreferenceScreen>