<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.lechucksoftware.proxy.proxysettings.dialogs.ProxySelectorDialog
        android:enabled="true"
        android:key="preference_proxy_selector"
        android:summary="@string/statusbar_notification_description_checking"
        android:title="@string/preference_proxy_host_port_title" />

    <PreferenceCategory
        android:enabled="false"
        android:key="pref_key_proxy_settings_authentication_screen"
        android:summary="@string/preference_proxy_authentication_screen_summary"
        android:title="@string/preference_proxy_authentication_screen_title" >
        
        <CheckBoxPreference
            android:enabled="true"
            android:key="preference_authentication_enabled"
            android:summary="@string/preference_proxy_authentication_summary_disabled"
            android:title="@string/preference_proxy_authentication_title" />

        <EditTextPreference
            android:enabled="false"
            android:key="preference_authentication_user"
            android:summary="@string/preference_proxy_authentication_user_summary"
            android:title="@string/preference_proxy_authentication_user_title" />
        <EditTextPreference
            android:enabled="false"
            android:inputType="textPassword"
            android:key="preference_authentication_password"
            android:summary="@string/preference_proxy_authentication_password_summary"
            android:title="@string/preference_proxy_authentication_password_title" />
    </PreferenceCategory>

    <CheckBoxPreference
        android:enabled="true"
        android:key="preference_notification_enabled"
        android:summary="@string/preferences_statusbar_notification_description_enabled"
        android:title="@string/preferences_statusbar_notification_title" />

</PreferenceScreen>