<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="pref_key_proxy_settings_advanced_prefscreen"
        android:persistent="false"
        android:summary="@string/pref_key_proxy_settings_advanced_prefscreen_description"
        android:title="@string/pref_key_proxy_settings_advanced_prefscreen_title" >
        
        <Preference
            android:enabled="true"
            android:key="preference_test_proxy_configuration"
            android:summary="@string/preference_test_proxy_configuration_summary"
            android:title="@string/preference_test_proxy_configuration_title" />

        <com.lechucksoftware.proxy.proxysettings.ValidationPreference
            android:key="validation_proxy_enabled"
            android:summary="@string/validation_proxy_summary_checking"
            android:title="@string/validation_proxy_enabled_title" />
        <com.lechucksoftware.proxy.proxysettings.ValidationPreference
            android:key="validation_proxy_valid_address"
            android:summary="@string/validation_proxy_summary_checking"
            android:title="@string/validation_proxy_address_title" />
        <com.lechucksoftware.proxy.proxysettings.ValidationPreference
            android:key="validation_proxy_reachable"
            android:summary="@string/validation_proxy_summary_checking"
            android:title="@string/validation_proxy_reachable_title" />
        <com.lechucksoftware.proxy.proxysettings.ValidationPreference
            android:key="validation_web_reachable"
            android:summary="@string/validation_proxy_summary_checking"
            android:title="@string/validation_proxy_web_reachable_title" />

    </PreferenceScreen>

    <com.lechucksoftware.proxy.proxysettings.dialogs.UrlDownloaderDialogPreference
        android:enabled="true"
        android:key="preference_url_downloader"
        android:summary="@string/preference_test_proxy_urlretriever_summary"
        android:title="@string/preference_test_proxy_urlretriever_title" />

    <com.lechucksoftware.proxy.proxysettings.dialogs.UrlBrowserDialogPreference
        android:enabled="true"
        android:key="preference_browser_intowebview"
        android:summary="@string/preference_test_proxy_webview_summary"
        android:title="@string/preference_test_proxy_webview_title" />

    <!-- <Preference -->
    <!-- android:enabled="true" -->
    <!-- android:key="preference_applications_feedback" -->
    <!-- android:summary="@string/preference_applications_feedback_summary" -->
    <!-- android:title="@string/preference_applications_feedback_title" /> -->

</PreferenceScreen>