<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/com.lechucksoftware.proxy.proxysettings"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.lechucksoftware.proxy.proxysettings.components.InputField
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/proxy_hostname_label"
            app:hint="@string/proxy_hostname_hint"
            app:value="" />

    <com.lechucksoftware.proxy.proxysettings.components.InputField
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/proxy_port_label"
            app:hint="@string/proxy_port_hint"
            app:value="" />

    <com.lechucksoftware.proxy.proxysettings.components.InputField
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:title="@string/proxy_exclusionlist_label"
            app:hint="@string/proxy_exclusionlist_hint"
            app:value="" />

</LinearLayout>