<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:enabled="true"
        android:key="preference_notification_enabled"
        android:summary="@string/preferences_statusbar_notification_description_enabled"
        android:title="@string/preferences_statusbar_notification_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="preference_notification_enabled"
        android:enabled="true"
        android:key="preference_notification_always_visible"
        android:summary="@string/preferences_statusbar_notification_persistance_description_enabled"
        android:title="@string/preferences_statusbar_notification_persistance_title" />

</PreferenceScreen>