<?xml version="1.0" encoding="utf-8"?>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center|center_vertical"
		android:orientation="vertical"
		android:padding="10dp">
		
		<TextView
			android:id="@+id/disclaimer_app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:textStyle="bold"
			android:text="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge" />
	
		<TextView
			android:id="@+id/disclaimer_intro"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:text="@string/disclaimer_intro_text" />
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="0"
			android:orientation="horizontal">
			<Button
				android:id="@+id/disclaimer_accept_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/accept" />
			<Button
				android:id="@+id/disclaimer_cancel_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/cancel" />
		</LinearLayout>
	</LinearLayout>
